force-app/main/default/objects/MR_s__c/MR_s__c.object-meta.xml
<CustomObject>
    <label>Mat Req</label>
    <nameField>
        <label>MR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mat Req</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>