force-app/main/default/objects/MR_s__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Mat Req</relationshipLabel>
    <relationshipName>Mat_Req</relationshipName>
    <type>Lookup</type>
</CustomField>