force-app/main/default/objects/MR_s__c/fields/WO__c.field-meta.xml
<CustomField>
    <fullName>WO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WO #</label>
    <referenceTo>Job_Cards__c</referenceTo>
    <relationshipLabel>Mat Req</relationshipLabel>
    <relationshipName>Mat_Req</relationshipName>
    <type>Lookup</type>
</CustomField>