force-app/main/default/objects/MR_s__c/listViews/Power_Swivel.listView-meta.xml
<ListView>
    <fullName>Power_Swivel</fullName>
    <columns>NAME</columns>
    <columns>WD_Unit__c</columns>
    <columns>WO__c</columns>
    <filterScope>Everything</filterScope>
    <label>Power Swivel</label>
</ListView>